src/objects/filegen__File_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>filegen__Date_Format__c</fullName>
        <label>Date Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>AlphaNumeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monetory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filegen__Mapped_Field__c</fullName>
        <label>Mapped Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Mapped_Object__c</fullName>
        <label>Mapped Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filegen__Padding_Character__c</fullName>
        <label>Padding Character</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__Padding_Type__c</fullName>
        <label>Padding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>filegen__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filegen__Start_Position__c</fullName>
        <label>Start Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>File Metadata</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>File Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>